--- a/views/node.hbs
+++ b/views/node.hbs
@@ -1,7 +1,5 @@
 <h1>Node view</h1>
-{{ message }}
-
-<form action="/message" method="post">
-    <input type="text" name="message">
+<form action="/" method="post">
+    <input type="text" name="email">
     <button type="submit">submit</button>
 </form>
