--- a/views/node.hbs
+++ b/views/node.hbs
@@ -1,4 +1,5 @@
 <h1>Node view</h1>
+{{email}}
 <form action="/" method="post">
     <input type="text" name="email">
     <button type="submit">submit</button>
