--- a/assets/app/app.component.html
+++ b/assets/app/app.component.html
@@ -1,11 +1,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-8col-md-offset-2">
-            <app-message 
-                [message] = "message" 
-                (editClicked)= "message.content = $event"
-                 *ngFor="let message of messages">
-            </app-message>
+            <app-message-list></app-message-list>
         </div>
     </div>
 </div>
