--- a/assets/app/app.component.html
+++ b/assets/app/app.component.html
@@ -1,6 +1,11 @@
 <div class="container">
     <div class="row">
         <div class="col-md-8col-md-offset-2">
+            <app-message-input></app-message-input>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-8col-md-offset-2">
             <app-message-list></app-message-list>
         </div>
     </div>
