--- a/assets/app/messages/message-input.component.html
+++ b/assets/app/messages/message-input.component.html
@@ -1,7 +1,7 @@
 <div class="col-md-8 col-md-offset-2">
     <div class="form-group">
         <label for="content">content</label>
-        <input type="text" id="content" class="form-control">
+        <input type="text" id="content" class="form-control" #input>
     </div>
-    <Button class="btn btn-primary" type="submit">Save</Button>
+    <Button class="btn btn-primary" type="submit"(click)="onSave(input.value)">Save</Button>
 </div>
