--- a/assets/app/app.component.html
+++ b/assets/app/app.component.html
@@ -1,13 +1,3 @@
 <div class="container">
-    <div class="row">
-        <div class="col-md-8col-md-offset-2">
-            <app-message-input></app-message-input>
-        </div>
-    </div>
-    <hr>
-    <div class="row">
-        <div class="col-md-8col-md-offset-2">
-            <app-message-list></app-message-list>
-        </div>
-    </div>
+    <app-header></app-header>
 </div>
